crates/paladin-tui/tests/snapshots/view_snapshots__snapshot_export_modal_confirmation_mismatch.snap
---
source: crates/paladin-tui/tests/view_snapshots.rs
expression: rendered
---
┌ Paladin [plaintext] ─────────────────────────────────────────────────────────┐
│ Search:                                                                      │
│ ──────────────────────────────────────────────────────────────────────────── │
│                                                                              │
│                      No accounts. Press `a` to add one.                      │
│   ┌ Export accounts ─────────────────────────────────────────────────────┐   │
│   │ Destination: [  ]                                                    │   │
│   │                                                                      │   │
│   │ Format:        Plaintext    ▶ Encrypted ◀                            │   │
│   │                                                                      │   │
│   │ invalid passphrase: confirmation_mismatch                            │   │
│   │                                                                      │   │
│   │                                                                      │   │
│   │           Tab cycles fields  ·  Enter submit  ·  Esc cancel          │   │
│   └──────────────────────────────────────────────────────────────────────┘   │
│                                                                              │
│                                                                              │
│ ──────────────────────────────────────────────────────────────────────────── │
│ [↑↓] move  [enter] copy  [n] next-HOTP  [a] add  [/] find                    │
└──────────────────────────────────────────────────────────────────────────────┘
