crates/paladin-tui/tests/snapshots/view_snapshots__snapshot_export_modal_zero_length.snap
---
source: crates/paladin-tui/tests/view_snapshots.rs
expression: rendered
---
┌ Paladin [plaintext] ─────────────────────────────────────────────────────────┐
│ Search:                                                                      │
│ ──────────────────────────────────────────────────────────────────────────── │
│                                                                              │
│                      No accounts. Press `a` to add one.                      │
│   ┌ Export accounts ─────────────────────────────────────────────────────┐   │
│   │ Destination: [  ]                                                    │   │
│   │                                                                      │   │
│   │ Format:        Plaintext    ▶ Encrypted ◀                            │   │
│   │                                                                      │   │
│   │ invalid passphrase: zero_length                                      │   │
│   │                                                                      │   │
│   │                                                                      │   │
│   │           Tab cycles fields  ·  Enter submit  ·  Esc cancel          │   │
│   └──────────────────────────────────────────────────────────────────────┘   │
│                                                                              │
│                                                                              │
│ ──────────────────────────────────────────────────────────────────────────── │
│ [↑↓] move  [enter] copy  [C] copy-next  [n] next-HOTP  [a] add  [/] find     │
└──────────────────────────────────────────────────────────────────────────────┘
