crates/paladin-tui/tests/snapshots/view_snapshots__snapshot_help_overlay.snap
---
source: crates/paladin-tui/tests/view_snapshots.rs
expression: "render_to_text(&state, snapshot_now(), 80, 32)"
---
┌┌ Help — keybindings ────────────────────────────────────────────────────────┐┐
││ Read-only — keys are listed for reference.                                 ││
││                                                                            ││
││ ↑ ↓ / j k / Ctrl-P Ctrl-N    Move selection up / down                      ││
││ PgUp PgDn / Ctrl-B Ctrl-F    Page up / down by viewport height             ││
││ Home End / gg G              Jump to first / last row of filtered set      ││
││ Ctrl-U Ctrl-D                Half-page up / down                           ││
││ zz                           Recenter viewport on selected row             ││
││ Enter                        Copy selected code                            ││
││ C                            Copy selected row's next code (TOTP only)     ││
││ n                            HOTP next-code (advance + reveal)             ││
││ a                            Open Add modal                                ││
││ r                            Open Remove confirmation                      ││
││ R                            Open Rename modal                             ││
││ i                            Open Import modal                             ││
││ e                            Open Export modal                             ││
││ Q                            Open QR Export modal for the focused row      ││
││ /                            Focus search bar                              ││
││ Tab / Shift-Tab              Cycle focus between search bar and list       ││
││ p                            Open Passphrase modal                         ││
││ s                            Open Settings modal                           ││
││ ?                            Open Help overlay                             ││
││ Esc                          Close modal / overlay / search; step back in  ││
││                              the create-vault wizard; quit on unlock /     ││
││                              startup-error / create-vault ChooseMode       ││
││ q                            Quit from list, startup-error, and            ││
││                              create-vault ChooseMode / ConfirmPlaintext    ││
││                              (otherwise a typed passphrase character)      ││
││ Ctrl-C                       Quit (any screen)                             ││
││                                 Esc closes                                 ││
│└────────────────────────────────────────────────────────────────────────────┘│
└──────────────────────────────────────────────────────────────────────────────┘
