crates/paladin-tui/tests/snapshots/view_snapshots__snapshot_import_modal_counts_panel.snap
---
source: crates/paladin-tui/tests/view_snapshots.rs
expression: rendered
---
┌ Paladin ─────────────────────────────────────────────────────────────────────┐
│ Search:                                                                      │
│ ──────────────────────────────────────────────────────────────────────────── │
│                                                                              │
│   ┌ Import accounts ─────────────────────────────────────────────────────┐   │
│   │ Import complete.                                                     │   │
│   │                                                                      │   │
│   │ Imported:    3                                                       │   │
│   │ Skipped:     1                                                       │   │
│   │ Replaced:    2                                                       │   │
│   │ Appended:    4                                                       │   │
│   │                                                                      │   │
│   │                                                                      │   │
│   │                                                                      │   │
│   │                         Enter or Esc to close                        │   │
│   └──────────────────────────────────────────────────────────────────────┘   │
│                                                                              │
│ ──────────────────────────────────────────────────────────────────────────── │
│ [↑↓] move  [enter] copy  [n] next-HOTP  [a] add  [/] find                    │
└──────────────────────────────────────────────────────────────────────────────┘
